antlr/src/main/java/fr/polytech/output/fr/polytech/grammar/MusicDSLParser.java
// Generated from C:/Users/Tobias Bonifay/dsl-midi/antlr/src/main/java/fr/polytech/grammar/MusicDSL.g4 by ANTLR 4.13.1
package fr.polytech.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MusicDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		FRACTION=18, SIGNED_INT=19, INT=20, VELOCITY_SYMBOL=21, INSTRUMENT=22, 
		NOTE=23, PERCUSSION=24, CLIP_NAME=25, MAIN_SEQUENCE=26, WS=27, LINE_COMMENT=28;
	public static final int
		RULE_musicComposition = 0, RULE_globalSettings = 1, RULE_signature = 2, 
		RULE_bpm = 3, RULE_volume = 4, RULE_velocity = 5, RULE_instrumentsSection = 6, 
		RULE_instrumentDefinition = 7, RULE_clipSection = 8, RULE_clip = 9, RULE_barSequence = 10, 
		RULE_barContent = 11, RULE_tempoChange = 12, RULE_volumeSetting = 13, 
		RULE_velocitySetting = 14, RULE_trackSequence = 15, RULE_track = 16, RULE_trackContent = 17, 
		RULE_noteSequence = 18, RULE_note = 19, RULE_duration = 20, RULE_percussionElement = 21, 
		RULE_mainSection = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"musicComposition", "globalSettings", "signature", "bpm", "volume", "velocity", 
			"instrumentsSection", "instrumentDefinition", "clipSection", "clip", 
			"barSequence", "barContent", "tempoChange", "volumeSetting", "velocitySetting", 
			"trackSequence", "track", "trackContent", "noteSequence", "note", "duration", 
			"percussionElement", "mainSection"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'signature'", "'bpm'", "'volume'", "'velocity'", "'Instruments:'", 
			"'clip'", "':'", "'bar'", "'['", "']'", "'LINEAR|'", "'tempo'", "'track'", 
			"','", "'('", "')'", "'|'", null, null, null, null, null, null, null, 
			null, "'CHORUS x2 COUPLET-A CHORUS'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "FRACTION", "SIGNED_INT", "INT", 
			"VELOCITY_SYMBOL", "INSTRUMENT", "NOTE", "PERCUSSION", "CLIP_NAME", "MAIN_SEQUENCE", 
			"WS", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MusicDSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MusicDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MusicCompositionContext extends ParserRuleContext {
		public GlobalSettingsContext globalSettings() {
			return getRuleContext(GlobalSettingsContext.class,0);
		}
		public InstrumentsSectionContext instrumentsSection() {
			return getRuleContext(InstrumentsSectionContext.class,0);
		}
		public ClipSectionContext clipSection() {
			return getRuleContext(ClipSectionContext.class,0);
		}
		public MainSectionContext mainSection() {
			return getRuleContext(MainSectionContext.class,0);
		}
		public MusicCompositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_musicComposition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterMusicComposition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitMusicComposition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitMusicComposition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MusicCompositionContext musicComposition() throws RecognitionException {
		MusicCompositionContext _localctx = new MusicCompositionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_musicComposition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			globalSettings();
			setState(47);
			instrumentsSection();
			setState(48);
			clipSection();
			setState(49);
			mainSection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalSettingsContext extends ParserRuleContext {
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public BpmContext bpm() {
			return getRuleContext(BpmContext.class,0);
		}
		public VolumeContext volume() {
			return getRuleContext(VolumeContext.class,0);
		}
		public VelocityContext velocity() {
			return getRuleContext(VelocityContext.class,0);
		}
		public GlobalSettingsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalSettings; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterGlobalSettings(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitGlobalSettings(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitGlobalSettings(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalSettingsContext globalSettings() throws RecognitionException {
		GlobalSettingsContext _localctx = new GlobalSettingsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_globalSettings);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(51);
				signature();
				}
			}

			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(54);
				bpm();
				}
			}

			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(57);
				volume();
				}
			}

			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(60);
				velocity();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SignatureContext extends ParserRuleContext {
		public TerminalNode FRACTION() { return getToken(MusicDSLParser.FRACTION, 0); }
		public SignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignatureContext signature() throws RecognitionException {
		SignatureContext _localctx = new SignatureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_signature);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__0);
			setState(64);
			match(FRACTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BpmContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(MusicDSLParser.INT, 0); }
		public BpmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bpm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterBpm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitBpm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitBpm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BpmContext bpm() throws RecognitionException {
		BpmContext _localctx = new BpmContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bpm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__1);
			setState(67);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VolumeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(MusicDSLParser.INT, 0); }
		public VolumeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_volume; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterVolume(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitVolume(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitVolume(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VolumeContext volume() throws RecognitionException {
		VolumeContext _localctx = new VolumeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_volume);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__2);
			setState(70);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VelocityContext extends ParserRuleContext {
		public TerminalNode VELOCITY_SYMBOL() { return getToken(MusicDSLParser.VELOCITY_SYMBOL, 0); }
		public VelocityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_velocity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterVelocity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitVelocity(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitVelocity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VelocityContext velocity() throws RecognitionException {
		VelocityContext _localctx = new VelocityContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_velocity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(T__3);
			setState(73);
			match(VELOCITY_SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstrumentsSectionContext extends ParserRuleContext {
		public List<InstrumentDefinitionContext> instrumentDefinition() {
			return getRuleContexts(InstrumentDefinitionContext.class);
		}
		public InstrumentDefinitionContext instrumentDefinition(int i) {
			return getRuleContext(InstrumentDefinitionContext.class,i);
		}
		public InstrumentsSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrumentsSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterInstrumentsSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitInstrumentsSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitInstrumentsSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstrumentsSectionContext instrumentsSection() throws RecognitionException {
		InstrumentsSectionContext _localctx = new InstrumentsSectionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_instrumentsSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(T__4);
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				instrumentDefinition();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==INSTRUMENT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstrumentDefinitionContext extends ParserRuleContext {
		public TerminalNode INSTRUMENT() { return getToken(MusicDSLParser.INSTRUMENT, 0); }
		public TerminalNode INT() { return getToken(MusicDSLParser.INT, 0); }
		public InstrumentDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrumentDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterInstrumentDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitInstrumentDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitInstrumentDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstrumentDefinitionContext instrumentDefinition() throws RecognitionException {
		InstrumentDefinitionContext _localctx = new InstrumentDefinitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_instrumentDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(INSTRUMENT);
			setState(82);
			match(T__2);
			setState(83);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClipSectionContext extends ParserRuleContext {
		public List<ClipContext> clip() {
			return getRuleContexts(ClipContext.class);
		}
		public ClipContext clip(int i) {
			return getRuleContext(ClipContext.class,i);
		}
		public ClipSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clipSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterClipSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitClipSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitClipSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClipSectionContext clipSection() throws RecognitionException {
		ClipSectionContext _localctx = new ClipSectionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_clipSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__5);
			setState(87); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(86);
				clip();
				}
				}
				setState(89); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLIP_NAME );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClipContext extends ParserRuleContext {
		public TerminalNode CLIP_NAME() { return getToken(MusicDSLParser.CLIP_NAME, 0); }
		public BarSequenceContext barSequence() {
			return getRuleContext(BarSequenceContext.class,0);
		}
		public ClipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clip; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterClip(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitClip(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitClip(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClipContext clip() throws RecognitionException {
		ClipContext _localctx = new ClipContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_clip);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(CLIP_NAME);
			setState(92);
			match(T__6);
			setState(93);
			barSequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BarSequenceContext extends ParserRuleContext {
		public BarContentContext barContent() {
			return getRuleContext(BarContentContext.class,0);
		}
		public BarSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_barSequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterBarSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitBarSequence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitBarSequence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BarSequenceContext barSequence() throws RecognitionException {
		BarSequenceContext _localctx = new BarSequenceContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_barSequence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__7);
			setState(96);
			match(T__8);
			setState(97);
			barContent();
			setState(98);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BarContentContext extends ParserRuleContext {
		public TrackSequenceContext trackSequence() {
			return getRuleContext(TrackSequenceContext.class,0);
		}
		public TempoChangeContext tempoChange() {
			return getRuleContext(TempoChangeContext.class,0);
		}
		public VolumeSettingContext volumeSetting() {
			return getRuleContext(VolumeSettingContext.class,0);
		}
		public VelocitySettingContext velocitySetting() {
			return getRuleContext(VelocitySettingContext.class,0);
		}
		public BarContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_barContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterBarContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitBarContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitBarContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BarContentContext barContent() throws RecognitionException {
		BarContentContext _localctx = new BarContentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_barContent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(100);
				tempoChange();
				}
			}

			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(103);
				volumeSetting();
				}
			}

			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VELOCITY_SYMBOL) {
				{
				setState(106);
				velocitySetting();
				}
			}

			setState(109);
			trackSequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TempoChangeContext extends ParserRuleContext {
		public TerminalNode SIGNED_INT() { return getToken(MusicDSLParser.SIGNED_INT, 0); }
		public TempoChangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tempoChange; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterTempoChange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitTempoChange(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitTempoChange(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TempoChangeContext tempoChange() throws RecognitionException {
		TempoChangeContext _localctx = new TempoChangeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_tempoChange);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__10);
			setState(112);
			match(T__11);
			setState(113);
			match(SIGNED_INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VolumeSettingContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(MusicDSLParser.INT, 0); }
		public VolumeSettingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_volumeSetting; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterVolumeSetting(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitVolumeSetting(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitVolumeSetting(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VolumeSettingContext volumeSetting() throws RecognitionException {
		VolumeSettingContext _localctx = new VolumeSettingContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_volumeSetting);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(T__2);
			setState(116);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VelocitySettingContext extends ParserRuleContext {
		public TerminalNode VELOCITY_SYMBOL() { return getToken(MusicDSLParser.VELOCITY_SYMBOL, 0); }
		public VelocitySettingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_velocitySetting; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterVelocitySetting(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitVelocitySetting(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitVelocitySetting(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VelocitySettingContext velocitySetting() throws RecognitionException {
		VelocitySettingContext _localctx = new VelocitySettingContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_velocitySetting);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(VELOCITY_SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
